Added Owner side functionality

--- a/Vehicle Registration System/appsettings.json
+++ b/Vehicle Registration System/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=VehicleRegistrationSystem;Username=postgres;Password=password"
   },
+  "Jwt": {
+    "Key": "Mmx44IfURe84A/c4i0g2eY8m/DEhzUzXyyVPwKIo2SU=",
+    "Issuer": "MyIssuer",
+    "Audience": "MyAudience"
+  },
   "AllowedHosts": "*"
 }
