Adjusted for deployment

--- a/Vehicle Registration System/appsettings.json
+++ b/Vehicle Registration System/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=VehicleRegistrationSystem;Username=postgres;Password=password"
+    "DefaultConnection": "Host=vehicleregistration24.postgres.database.azure.com;Port=5432;Database=postgres;Username=vullnetazizi;Password=Takemeon1!"
   },
   "Jwt": {
     "Key": "Mmx44IfURe84A/c4i0g2eY8m/DEhzUzXyyVPwKIo2SU=",
